# otk

./: .gitignore  BACKLOG.md  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: conan.yml
cmake/: compile_flags.templ
include/otk/: common.hpp
src/: otk.cpp
test/: test_common.cpp
